# jazz_books_repo

./: README.md  cleanup_files.py  main.py  pyproject.toml
data/master/: !b 100 Jazz & Blues (piano).bookmark  !b 101 Hits For Buskers Book 1.bookmark  !b 101 Hits For Buskers Book 2.bookmark  !b 145 Jazz Standards.bookmark  !b 150 Most Beautiful Songs 3rd Ed (piano).bookmark  !b American Jazz Standards (Russian).bookmark  !b Anthologie Des Grilles De Jazz Charts.bookmark  !b Bob Book, The New.bookmark  !b Bob Book, The New.inote  !b Classic Real Book V4.bookmark  !b Classic Real Book V4.inote  !b Dick Hyman's 100 More Tunes.bookmark  !b Disney Treasury Of Songs.bookmark  !b Django in June 2020.bookmark  !b Firehouse Fake Book (plus).bookmark  !b Firehouse Fake Book (plus).inote  !b Good Book.bookmark  !b Good Book.idraw  !b Good Book.inote  !b Great Gig Book.bookmark  !b Great Gig Book.idraw  !b Great Gig Book.inote  !b Handbook Of Jazz Standards.bookmark  !b Million $ Library Volume 1.bookmark  !b Monster Book 1.bookmark  !b Movie Fake Book 5ed 500 songs.bookmark  !b Movie Fake Book 5ed 500 songs.inote  !b New Oreleans Jambook C+Bb.bookmark  !b Other Book.bookmark  !b Other Book.idraw  !b Public Domain Andersen.bookmark  !b Real Book 6ed European Pocket.bookmark  !b Real Book 6ed European Pocket.idraw  !b Real Book II 2ed.bookmark  !b Real Book II 2ed.idraw  (+179 more)
docs/: MODIFICATION.md  OVERVIEW.md  SCRIPTS.md
igigbook_manager/: __init__.py  __main__.py  categories.py  manager.py  utils.py
scripts/: run_manager..py  run_manager.py  test_manager.py
